--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,3 +15,12 @@ input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #fff inset !important;
  -webkit-text-fill-color: #333;
 }
+.fl{
+  float:left;
+}
+.fr{
+  float:right;
+}
+.hidden{
+  display: none;
+}
