--- a/src/css/details.less
+++ b/src/css/details.less
@@ -2,18 +2,7 @@
 .horizon-center(@tb:0px){
   margin:@tb auto;
 }
-.fl{
-  float:left;
-}
-.fr{
-  float:right;
-}
-.clearFix:after{
-  content:'';
-  display:block;
-  height:0;
-  clear:both;
-}
+
 .set-border-radius(@lt,@rt,@lb,@rb){
   -moz-border-radius: @lt @rt @lb @rb;     /* Firefox */
   -webkit-border-radius: @lt @rt @lb @rb;  /* Safari and Chrome */
@@ -341,15 +330,6 @@ body{
       margin:30px 40px 0;
       float:left;
     }
-    .text-area{
-      width: 100%;
-      height: 98px;
-      margin:30px 0 0 40px;
-      float:left;
-    }
-    label{
-      width:105px;
-    }
     input{
       width:328px;
       height: 30px;
@@ -388,10 +368,20 @@ body{
     }
   }
 }
-.hidden{
-  display: none;
+.text-area{
+  width: 100%;
+  height: 98px;
+  margin:30px 0 0 40px;
+  float:left;
+  label{
+    padding-top:10px;
+    width: 89px;
+    float:left;
+  }
+  textarea{
+    float:left;
+  }
 }
-
 #tiptip_content{
   width: 250px;
   padding:10px 20px;
